*Empty MediaWiki Message*

--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -1,7 +1,7 @@
 __NOTOC__
 __NOTOC__
 <!--  {{Banner}}   -->
-{|border="1" width="100%"
+{| class="wikitable" border="1" width="100%"
 |[[File:Emblem_of_Bhutan.svg|right|100px|རྒྱལ་ཡོངས་ ལས་རྟགས།]][[File:Flag_of_Bhutan.svg|left|100px|རྒྱལ་དར།]]རྫོང་ཁའི་ཝེ་ཁེ་རིག་མཛོད་ལུ་བྱོན་པ་ལེགས་སོ།
 </center>
 |<inputbox>
