--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -1,8 +1,8 @@
 __NOTOC__
 __NOTOC__
 
-{| class="wikitable" border="1" width="100%"
-|[[File:Emblem_of_Bhutan.svg|right|100px|རྒྱལ་ཡོངས་ ལས་རྟགས།]][[File:Flag_of_Bhutan.svg|left|100px|རྒྱལ་དར།]]རྫོང་ཁའི་ཝེ་ཁེ་རིག་མཛོད་ལུ་བྱོན་པ་ལེགས་སོ།
+{| class="wikitable" border="5" width="100%"
+|[[File:Emblem_of_Bhutan.svg|right|100px|རྒྱལ་ཡོངས་ ལས་རྟགས།]][[File:Flag_of_Bhutan.svg|left|100px|རྒྱལ་དར།]]<center><b>རྫོང་ཁའི་ཀི་རིག་མཛོད་ལུ་བྱོན་པ་ལེགས་སོ།</b>
 </center>
 |<inputbox>
  type=create
