*Empty MediaWiki Message*

--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -7,6 +7,7 @@ __NOTOC__
 |<inputbox>
  type=create
  width=35
+ buttonlabel=གསརཔ་བཟོ
  bgcolor=#ffffff
  preload=Template:Standard content for new page
  editintro=Template:Instructions
