--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -4,15 +4,18 @@ __NOTOC__
 {| class="wikitable" border="5" width="100%"
 |[[File:Emblem_of_Bhutan.svg|right|100px|རྒྱལ་ཡོངས་ ལས་རྟགས།]][[File:Flag_of_Bhutan.svg|left|100px|རྒྱལ་དར།]]<center><p style="font-size:16px"><b>རྫོང་ཁའི་ཀི་རིག་མཛོད་ལུ་བྱོན་པ་ལེགས་སོ།</b></p>
 </center>
+|}
+
+{|
 |<inputbox>
- type=གསརཔ་བཟོ
+ type=create
  width=35
+ buttonlanel=གསརཔ་བཟོ
  bgcolor=#ffffff
  preload=Template:Standard content for new page
  editintro=Template:Instructions
  default=
 </inputbox>
-|}
 {|
 | width="50%" valign="middle" |
 {| width="100%" border="0" cellspacing="0" cellpadding="5"
