--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -2,7 +2,7 @@ __NOTOC__
 __NOTOC__
 
 {| class="wikitable" border="5" width="100%"
-|[[File:Emblem_of_Bhutan.svg|right|100px|རྒྱལ་ཡོངས་ ལས་རྟགས།]][[File:Flag_of_Bhutan.svg|left|100px|རྒྱལ་དར།]]<center><p style="font-size:16px"><b>རྫོང་ཁའི་ཀི་རིག་མཛོད་ལུ་བྱོན་པ་ལེགས་སོ།</b></p>
+|[[File:Emblem_of_Bhutan.svg|right|100px|རྒྱལ་ཡོངས་ ལས་རྟགས།]][[File:Flag_of_Bhutan.svg|left|100px|རྒྱལ་དར།]]<center><p style="font-size:16px"><b>རྫོང་ཁའི་ཀི་རིག་མཛོད་ལུ་བྱོན་པ་ལེགས་སོ།</b></p>མི་རྣམས་ཀུན་གྱིས་རྩོམ་བྲིས་གནང་བཏུབ་པའི་ རིག་མཛོད་ཆེན་པོ།
 </center>
 |}
 
@@ -10,7 +10,7 @@ __NOTOC__
 |<inputbox>
  type=create
  width=35
- buttonlanel=གསརཔ་བཟོ
+ buttonlabel=གསརཔ་བཟོ
  bgcolor=#ffffff
  preload=Template:Standard content for new page
  editintro=Template:Instructions
