--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -47,6 +47,14 @@
 <div style="background-color:#bbddff; margin-bottom: 0.7em; padding: 0.2em 0.5em; font-size: 1.2em; line-height: 1.5em; overflow: visible; font-weight: bold; -moz-border-radius: 0.5em; -webkit-border-radius: 0.5em; border-radius: 0.5em;"><div style="float: left; margin: -8px 8px -8px 0px;">[[File:Wikimedia-logo-circle.svg|42px|middle|링크=]]</div>[[위키백과:자매 프로젝트|ཝི་ཀིའི་ལས་འགུལ་གཞན]]</div>
 {{སྐད་རིགས་གཞན།}}</div>
 
+<!-- 다른 언어 -->
+<div id="mp_otherLanguages" class="mp_outerbox" style="border:1px solid #a7d7f9; margin-bottom: 0.5em; vertical-align:top; padding: 1em; -moz-border-radius: 0.8em; -webkit-border-radius: 0.8em; border-radius: 0.8em;">
+<div style="background-color:#bbddff; margin-bottom: 0.7em; padding: 0.2em 0.5em; font-size: 1.2em; line-height: 1.2em; overflow: visible; font-weight: bold; -moz-border-radius: 0.5em; -webkit-border-radius: 0.5em; border-radius: 0.5em;"><div style="float: left; margin: -8px 8px -8px 0px;">[[파일:HSEarth.svg|35px|middle|링크=]]</div>다른 언어로 된 위키백과</div>
+{{다른 언어}}
+</div>
+<div id="mp_bottom" class="mp_outerbox" style="border:1px solid #a7d7f9; vertical-align:top; padding: 1em; -moz-border-radius: 0.8em; -webkit-border-radius: 0.8em; border-radius: 0.8em;">
+<div style="text-align:center;"><div style="font-size: 1.2em">[[위키백과:면책 조항|위키백과는 내용의 확실성을 보증하지 않습니다.]]</div>위키백과 프로젝트의 호스팅을 제공하는 [[위키미디어 재단]]은 내용상 오류에 대해 어떠한 책임도 지지 않습니다.<br />개인 편집자가 자신의 기여에 책임을 져야 합니다.</div>
+
 == ཁ་སྐད། ==
 {{གཞན།. ཁ་སྐད། ཁ། སྐད་ཡིག}}
 <!-- missing WikiMedia 1.3 support -->
