/* པར་རིས་བར་འཁྱམས། */

--- a/ལ་དྭགས།.mw
+++ b/ལ་དྭགས།.mw
@@ -8,7 +8,7 @@
 == པར་རིས་བར་འཁྱམས། ==
 <center>
 <gallery>
-File:India-LADAKH Full.svg|
+File:India Ladakh adm location map.svg|
 File:Gompa-Phyang-1.jpg|
 File:Tanglanglapass.jpg|
 File:Ladakh Monastery.jpg|
@@ -19,7 +19,6 @@ File:Stupa Chorten Ladakh.jpg|
 
 </gallery>
 </center>
-
 
 == ཟིན་ཐོ་འམ་དཔྱད་གཞི། ==
 == དཔྱད་གཞིའི་དཀར་ཆག ==
