*Empty MediaWiki Message*

--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -1,9 +1,9 @@
 {| {| class="wikitable" border="5" width="100%"
 
-| <div style="float: left; width: 0em; height: 0em; margin:-5em 0em 0em -3em; overflow: invisible;">
-[[File:Wikipedia-logo-v2-200px-transparent.png|left|100px|wiki]]</div>
+| <div style="float: left; width: 0em; height: 0em; margin:-0.5em 0em 0em -2.5em; overflow: invisible;">
 
-|[[File:Emblem_of_Bhutan.svg|right|100px|རྒྱལ་ཡོངས་ ལས་རྟགས།]]<center><p style="font-size:25px"><b>རྫོང་ཁའི་ཝི་ཀི་རིག་མཛོད་ལུ་བྱོན་པ་ལེགས་སོ།</b></p>མི་རྣམས་ཀུན་གྱིས་རྩོམ་བྲིས་གནང་བཏུབ་པའི་ རིག་མཛོད་ཆེན་པོ།
+|[[File:Emblem_of_Bhutan.svg|right|100px|རྒྱལ་ཡོངས་ ལས་རྟགས།]][[File:Flag_of_Bhutan.svg|left|150px|རྒྱལ་དར།]]
+<center><p style="font-size:25px"><b>རྫོང་ཁའི་ཝི་ཀི་རིག་མཛོད་ལུ་བྱོན་པ་ལེགས་སོ།</b></p>མི་རྣམས་ཀུན་གྱིས་རྩོམ་བྲིས་གནང་བཏུབ་པའི་ རིག་མཛོད་ཆེན་པོ།
 </center>
 
 |}
