--- a/ཇཽ་ཇཱ.mw
+++ b/ཇཽ་ཇཱ.mw
@@ -3,7 +3,14 @@
 [[File:Greater coat of arms of Georgia.svg|right|100px]]
 [[File:Georgia (orthographic--projection).svg|right|300px]]
 རྒྱལ་ས [[ཊི་བི་ལི་སི]] ''(Tbilisi)''།
-
+<br><gallery caption="ཇཽ་ཇཱ">
+Tbilisi-Sameba-Kathedrale-06-Kuppel-2019-gje.jpg|Tbilisi
+Mtskheta-Svetitskhoveli-Kirche-16-Mauer-2019-gje.jpg|Mtskheta
+Stepantsminda-Dreifaltigkeits-Kirche-18-Glockenturm-2019-gje.jpg|Stepantsminda
+Bodbe-26-neue Kirche-innen-2019-gje.jpg|Bodbe
+Ananuri-Mariae-Himmelfahrt-Kirche-08-Suedfassade-2019-gje.jpg|Ananuri
+Sighnaghi-St Georg-14-2019-gje.jpg|Sighnaghi
+</gallery>
 [[Category:ཇཽ་ཇཱ |*]]
 
 <!--Other languages-->
