*Empty MediaWiki Message*

--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -1,6 +1,6 @@
 {| {| class="wikitable" border="5" width="100%"
 
-| <div style="float: left; width: 0em; height: 0em; margin:0em 0em 0em 0em; overflow: visible;">
+| <div style="float: left; width: 0em; height: 0em;>
 |
 [[File:Emblem_of_Bhutan.svg|right|100px|རྒྱལ་ཡོངས་ ལས་རྟགས།]]
 [[File:Flag_of_Bhutan.svg|left|150px|རྒྱལ་དར།]]
