--- a/ཐིམ་ཕུག།.mw
+++ b/ཐིམ་ཕུག།.mw
@@ -18,6 +18,16 @@
 * [[བཀྲ་ཤིས་ཆོས་རྫོང]]
 * [[རྟ་མགོ།]]
 * [[རྫོང་ཁ་གོང་འཕེལ་ལྷན་ཚོགས]]
-
+<br><gallery caption="Thimphu">
+Thimphu-08-vom Buddha Dordenma-Stadion-2015-gje.jpg|Thimphu
+Thimphu-30-Verkehrspolizist-2015-gje.jpg|Downtown Thimphu
+Thimphu-Buddha Dordenma-14-2015-gje.jpg|Buddha Dordenma
+Thimphu-Buddha Dordenma-28-68. Erzabt-2015-gje.jpg|
+Thimphu-Dzong-18-Adler-2015-gje.jpg|Dzong
+Thimphu-Markt-08-Frau mit Kleinkind-2015-gje.jpg|Market
+Thimphu-Nationalchoerten-12-Altersheim-2015-gje.jpg|Memorial Chorten
+Thimphu-Weberei-08-2015-gje.jpg|
+Thimphu-Papiermanufaktur-16-2015-gje.jpg|
+</gallery>
 
 [[Category:ཐིམ་ཕུ|   ]]
