--- a/ཐིམ་ཕུ་རྫོང་ཁག.mw
+++ b/ཐིམ་ཕུ་རྫོང་ཁག.mw
@@ -2,7 +2,15 @@
 
 ཐིམ་ཕུ་རྫོང་ཁག
 
-
+<br><gallery caption="ཐིམ་ཕུ་རྫོང་ཁག">
+Thimphu-18-Dzong-2015-gje.jpg|
+Thimphu-Stadion-08-Laenderspiel Bhutan-Hongkong-2015-gje.jpg|
+Thimphu District-10-Haus-2015-gje.jpg|
+Thimphu-Takin-Reservat-10-2015-gje.jpg|
+Bhutan-Straßenbau-116-Dochu La-Abfahrt-Bagger-gje.jpg|
+Dochu La-Gompa-02-2015-gje.jpg|
+Dochu La-View-22-Opferstelle-2015-gje.jpg|
+</gallery>+
 == ཁོར་ཡུག ==
 == མགྲོན་ཁང་། ==
 == ལོ་རྒྱུས། ==
