--- a/སྤུ་ན་ཁ་རྫོང་ཁག.mw
+++ b/སྤུ་ན་ཁ་རྫོང་ཁག.mw
@@ -3,7 +3,16 @@
 '''སྤུ་ན་ཁ་རྫོང་ཁག'''       
 
 འབྲུག་གི་རྫོང་ཁག [[འབྲུག་ཡུལ་]]
-
+<br><gallery caption="སྤུ་ན་ཁ་གི་ས་ཁོངས།">
+Punakha-Dzong-02-2015-gje.jpg|
+Punakha-Dzong-16-Bruecke-2015-gje.jpg|
+Punakha-Dzong-50-Fassade-2015-gje.jpg|
+Punakha-Dzong-64-Drachen-2015-gje.jpg|
+Punakha-Lobesa-54-Huetten-2015-gje.jpg|
+Punakha-Sopsokha-26-Haeuser mit Phallus-2015-gje.jpg|
+Yowakha-02-Reisterrassen-2015-gje.jpg|
+Punakha-Chime Lhakhang-04-2015-gje.jpg|
+</gallery>
 
 == ཁོར་ཡུག ==
 * [[སྤུ་ན་ཁ་]]
