--- a/དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག.mw
+++ b/དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག.mw
@@ -1,6 +1,15 @@
 [[File:BhutanWangduePhodrang.png|right|thumb]]
 
 '''དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག''' འབྲུག་གི་རྫོང་ཁག ལུ། [[འབྲུག་ཡུལ་|འབྲུག་ཡུ]]
+<br><gallery caption="དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག">
+Wangdue Phodrang-52-Landschaft-2015-gje.jpg|
+Bhutan-Straßenbau-154-Bezirk Wangdue Phodrang-gje.jpg|
+Wangdue Phodrang-Chazam-13-Norbu Yangphel Restaurant-Nachbarhaus-2015-gje.jpg|
+Wangdue Phodrang-Chazam-18-Haus-2015-gje.jpg|
+Wangdue Phodrang-Nobding-08-Kuenphen Restaurant-Ausblick-2015-gje.jpg|
+Wangdue Phodrang-Yaks-10-2015-gje.jpg|
+Wangdue Phodrang-Yaks-08-Treiber-2015-gje.jpg|
+</gallery>
 == ཁོར་ཡུག ==
 
 == མགྲོན་ཁང་། ==
