--- a/ཀྲོང་གསར་རྫོང་ཁག.mw
+++ b/ཀྲོང་གསར་རྫོང་ཁག.mw
@@ -18,14 +18,16 @@
 == མི་སྣ། ==
 སྟག་ཚ་བླ་རྒན། སྟག་ཕྲུག་
 == པར་རིས་བར་འཁྱམས། ==
-<center>
-<gallery>
-
-
-
-</gallery>
-</center>
-== ཟིན་ཐོ་འམ་དཔྱད་གཞི། ==
+<center><br><gallery caption="ཀྲོང་གསར་གི་ས་ཁོངས།">
+Trongsa-Dzong-104-2015-gje.jpg|
+Trongsa-Dzong-118-2015-gje.jpg|
+Trongsa-Dzong-178-Innenhof-2015-gje.jpg|
+Trongsa-Dzong-186-Balken-2015-gje.jpg|
+Trongsa-Yangkhil Resort-04-Eingang-2015-gje.jpg|
+Trongsa-20-Landschaft-2015-gje.jpg|
+Trongsa-12-Viewpoint Cafeteria-2015-gje.jpg|
+Trongsa-Chendebji-Choerten-04-2015-gje.jpg|
+</gallery></center>== ཟིན་ཐོ་འམ་དཔྱད་གཞི། ==
 == དཔྱད་གཞིའི་དཀར་ཆག། ==
 == ད་དུང་གཟིགས། ==
 == ཕྱི་ཕྱོགས་དྲ་མཐུད། ==
