--- a/བུམ་ཐང་རྫོང་ཁག.mw
+++ b/བུམ་ཐང་རྫོང་ཁག.mw
@@ -11,13 +11,16 @@
 == མི་སྣ། ==
 
 == པར་རིས་བར་འཁྱམས། ==
-<center>
-<gallery>
-
-
-
-</gallery>
-</center>
+<center><br><gallery caption="བུམ་ཐང་རྫོང་ཁག།">
+Bumthang-08-Haus-2015-gje.jpg|
+Bumthang-22-Fluss-2015-gje.jpg|
+Bumthang-28-Reisernte-2015-gje.jpg|
+Bumthang-70-Totenfahnen-2015-gje.jpg|
+Bumthang-Jakar Dzong-10-2015-gje.jpg|
+Bumthang-44-Flugplatz-Auto-2015-gje.jpg|
+Bumthang-Mebar Tsho-16-Gebetsfahnen-2015-gje.jpg|
+Bumthang-Kurjey Lhakhang-06-2015-gje.jpg|
+</gallery></center>
 == ཟིན་ཐོ་འམ་དཔྱད་གཞི། ==
 == དཔྱད་གཞིའི་དཀར་ཆག། ==
 == ད་དུང་གཟིགས། ==
