*Empty MediaWiki Message*

--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -1,4 +1,4 @@
-{| {| class="wikitable" border="5" width="100%"
+{| {| class="wikitable" border="5" width="100%" length="available"
 |
 [[File:Emblem_of_Bhutan.svg|right|100px|རྒྱལ་ཡོངས་ ལས་རྟགས།]]
 [[File:Flag_of_Bhutan.svg|left|150px|རྒྱལ་དར།]]
