--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -1,8 +1,8 @@
-{| {| class="wikitable" border="5" width="100%" length="available"
+{| {| class="wikitable" border="5px" "yellow""yellow" "orange" orange" width="100%" length="available"
 |
 [[File:Emblem_of_Bhutan.svg|right|100px|རྒྱལ་ཡོངས་ ལས་རྟགས།]]
 [[File:Flag_of_Bhutan.svg|left|150px|རྒྱལ་དར།]]
-<center><p style="font-size:25px"><b>རྫོང་ཁའི་ཝི་ཀི་རིག་མཛོད་ལུ་བྱོན་པ་ལེགས་སོ།</b></p>མི་རྣམས་ཀུན་གྱིས་རྩོམ་བྲིས་གནང་བཏུབ་པའི་ རིག་མཛོད་ཆེན་པོ།
+<center><p style="font-size:1.56em"><b>རྫོང་ཁའི་ཝི་ཀི་རིག་མཛོད་ལུ་བྱོན་པ་ལེགས་སོ།</b></p>མི་རྣམས་ཀུན་གྱིས་རྩོམ་བྲིས་གནང་བཏུབ་པའི་ རིག་མཛོད་ཆེན་པོ།
 </center>
 |}
 
