--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -20,7 +20,7 @@
 {|
 | width="100%" valign="middle" |
 {| width="100%" length="100%" border="0" cellspacing="0" cellpadding="5"
-| width="10%" |[[File:Nuvola_apps_kcoloredit.png|centre|40x40px]]
+| width="10%" |[[File:Sciences de la terre.svg|centre|40x40px]]
 | width="90%" style="font-size: 95%; " |'''[[འབྲུག་རྒྱལ་ཁབ།]]'''
 [[འབྲུག་ཡུལ་]]&nbsp;- [[སྐུ་འཁོར་གྱི་རྒྱུད་པ།]]&nbsp;- [[འབྲུག་]]&nbsp;- [[ཐིམ་ཕུ་]]&nbsp;- [[རྫོང་ཁ་]]&nbsp; [[དངུལ་ཀྲམ་]]&nbsp;- [[རྒྱལ་པོ་འཇིགས་མེད་ཁེ་གསར་རྣམ་རྒྱལ་དབང་པྱུག་]]&nbsp;- [[འབྲུག་ཙན་དན་]]&nbsp;- [[ཕུན་ཚོགས་གླིང་]]&nbsp;- [[སྤུ་ན་ཁ་]]&nbsp;- [[བསམ་གྲུབ་ལྗོངས་མཁར་]]&nbsp;- [[གསར་སྤང་]]&nbsp;- [[སྤ་རོ་]]&nbsp;- [[བཀྲིས་སྒང་]]&nbsp;- [[དབང་འདུས་ཕོ་བྲང་]]&nbsp;- [[ཏ་ག་རྫོང་]]&nbsp;- [[ཀྲོང་གསར་]]&nbsp;- [[རྟ་མགོ]]&nbsp;-
 |-
