*Empty MediaWiki Message*

--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -49,8 +49,7 @@
 |[[File:Nuvola_apps_display.png|centre|40x40px]]
 | style="font-size: 95%; border-top: 1px dashed #AAAAAA; " |'''[[དཔེ་བསྐྲུན།]]''' <!--Others-->
 |-
-|-
-|[[File:Nuvola_apps_xmag.png|centre|40x40px]]
+|[[File:Basketball Clipart.svg|centre|40x40px]]
 | style="font-size: 95%; border-top: 1px dashed #AAAAAA;" |'''[[རྩེད་རིགས]]'''
 [[དྲྭ་རིལ]]&nbsp;- [[ཐང་རིལ]]&nbsp;- [[རྐང་རིལ]]&nbsp;- [[རག་བི]]&nbsp;- [[གཡུག་རིལ]]&nbsp;- [[འདེད་རིལ]]<!-- hockey -->&nbsp;-
 |-
