--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -1,4 +1,4 @@
-{| {| class="wikitable" border="5px" "yellow""yellow" "orange" orange" width="100%" length="available"
+{| border="5px" width="100%" {| "yellow""yellow" "orange" orange" length="available"
 |
 [[File:Emblem_of_Bhutan.svg|right|100px|རྒྱལ་ཡོངས་ ལས་རྟགས།]]
 [[File:Flag_of_Bhutan.svg|left|150px|རྒྱལ་དར།]]
@@ -64,10 +64,9 @@
 
 <div id="mp_sisterProjects" class="mp_outerbox" style="border:1px solid #a7d7f9; margin: 0.5em 0 0.5em; vertical-align:top; padding: 1em; -moz-border-radius: 0.8em; -webkit-border-radius: 0.8em; border-radius: 0.8em;">
 <div style="background-color:#bbddff; margin-bottom: 0.7em; padding: 0.2em 0.5em; font-size: 1.2em; line-height: 1.5em; overflow: visible; font-weight: bold; -moz-border-radius: 0.5em; -webkit-border-radius: 0.5em; border-radius: 0.5em;"><div style="float: left; margin: -8px 8px -8px 0px;">[[File:Wikimedia-logo-circle.svg|42px|middle|링크=]]</div>[[위키백과:자매 프로젝트|ཝི་ཀིའི་ལས་འགུལ་གཞན]]</div>
-{{སྐད་རིགས་གཞན།}}</div>
+{{སྐད་རིགས་གཞན།}}
 
 
 <!-- missing WikiMedia 1.3 support -->
 <!-- missing WikiMedia 1.3 support -->
 <!-- missing WikiMedia 1.3 support -->
-|}
