--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -1,4 +1,5 @@
-{|wikitable border="10px" width="100%" yellow yellow orange orange length="available"
+
+{| class="wikitable" border="10px" width="100%" wikitable backgroung-color="green" yellow orange length="available"
 |
 [[File:Emblem_of_Bhutan.svg|right|100px|རྒྱལ་ཡོངས་ ལས་རྟགས།]]
 [[File:Flag_of_Bhutan.svg|left|150px|རྒྱལ་དར།]]
