--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -69,8 +69,8 @@
 
 <div class="wikipedia-ko sister main-box" style="clear: both; display:inline-block; width: 100%; margin-top: 20px;">
 	<div class="wikipedia-ko sister-header" style="width: 100%; font-size: 1.1em; overflow: auto;">
-		<span style="display: inline-block; height: 2rem; line-height: 2rem; padding-left: .5rem; padding-right: 1rem; margin: .6rem 0; border-radius: 0 1rem 1rem 0; background-color: #EBEBEB;">'''[[위키백과:자매 프로젝트|자매 프로젝트]]'''</span></div>
-	<div style="clear: both; margin: 0 20px;">{{자매프로젝트}}</div>
+		<span style="display: inline-block; height: 2rem; line-height: 2rem; padding-left: .5rem; padding-right: 1rem; margin: .6rem 0; border-radius: 0 1rem 1rem 0; background-color: #EBEBEB;">'''[[위키백과:자매 프로젝트|སྐད་རིགས་གཞན]]'''</span></div>
+	<div style="clear: both; margin: 0 20px;">{{སྐད་རིགས་གཞན}}</div>
 
 
 <!-- missing WikiMedia 1.3 support -->
