--- a/༡༨༠༠.mw
+++ b/༡༨༠༠.mw
@@ -1,7 +1,7 @@
 == དབུ་ཁྲིད་ཀྱི་གོ་འཕང༌། ==
 * [[མི་དབང་རྒྱལཔོ།]] :
 
-== བྱ་སྒོ། ==
+== བྱ་སྒོ།[[User:MarcoAurelio]] [[User:Billinghurst]]==
 
 == སྐྱེ་ནི། ==
 
